test/spec_vectors/try_table/fail/module_6.wat
(module (func (result i32) (try_table (result i32))))